--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
       </progress>
     </div>
 
-    <script type="module" src="./script.js/index.js"></script>
+    <script type="module" src="./script/index.js"></script>
   </body>
 </html>
