--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
         class="uploader__button--upload"
         multiple
       />
-      <button id="upload-button" class="uploader__button--transfer">
+      <button
+        type="submit"
+        id="upload-button"
+        class="uploader__button--transfer"
+      >
         Files to Server
       </button>
-      <progress max="100" value="1" class="uploader__progressBar">
-        Value %
-      </progress>
+      <progress max="100" value="1" class="uploader__progressBar"></progress>
+      <span class="uploader__loadedTotal"></span>
     </div>
 
     <script type="module" src="./script/index.js"></script>
