creating parallel data transfering via chunks

--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
         class="uploader__button--upload"
         multiple
       />
-      <button
-        type="submit"
-        id="upload-button"
-        class="uploader__button--transfer"
-      >
+      <button id="upload-button" class="uploader__button--transfer">
         Files to Server
       </button>
       <progress max="100" value="1" class="uploader__progressBar"></progress>
